# accelerate_indexed_data

./: .gitignore  compare_same_precursor_contents.py
didnotwork/simplest-read-only-profiling-fix1-flag-change/: Cargo.toml
didnotwork/simplest-read-only-profiling-fix1-opt1-opt1/: Cargo.toml
didnotwork/simplest-read-only-profiling-fix1-opt1-opt1/src/: main.rs
legacy/aistation/: aistation-main.rs
legacy/aistation/timstof-opt_build_indexed-opt_read/: Rust_run.sh
legacy/aistation/timstof-opt_build_indexed-opt_read-debug1/: Rust_run.sh  performance.md
legacy/aistation/timstof-opt_build_indexed-opt_read-debug1/src/: main.rs
legacy/aistation/timstof-opt_build_indexed-opt_read-debug2/: performance.md
legacy/aistation/timstof-opt_build_indexed-opt_read-debug3/: Cargo.toml
legacy/aistation/timstof-opt_build_indexed-opt_read-debug3/src/: utils.rs
legacy2/original-withsave/: Cargo.toml
legacy2/original-withsave/src/: main.rs
legacy2/test-1-opus4/: Cargo.toml
legacy2/test-2-o3pro/: Cargo.toml
legacy2/test-2-o3pro-withsave/: Cargo.toml
legacy2/test-2-o3pro-withsave/src/: main.rs
legacy2/test-2-o3pro/src/: main.rs
simplest-read-and-index/src/: main.rs
simplest-read-only-profiling-fix1-changenumthreadsto64/src/: main.rs
simplest-read-only-profiling-fix1-flag-change/: Cargo.toml
simplest-read-only-profiling-fix1-opt1-index-opt1/: Cargo.toml
simplest-read-only-profiling-fix1-opt1-index-opt1/src/: main.rs
simplest-read-only-profiling-fix1-opt1-index/src/: main.rs
simplest-read-only-profiling-fix1-opt1-opt1/src/: main.rs
simplest-read-only-profiling-fix1-opt1/src/: main.rs
simplest-read-only-profiling-fix1/src/: main.rs
simplest-read-only-profiling-fix2-profiling/src/: main.rs
simplest-read-only-profiling-fix2/src/: main.rs
simplest-read-only-profiling-fix3/src/: main.rs
simplest-read-only-profiling-fix4/src/: main.rs
simplest-read-only-profiling-fix5/src/: main.rs
simplest-read-only-profiling-fix6/: Cargo.toml
simplest-read-only-profiling-fix6/src/: main.rs
simplest-read-only-profiling-fix7/src/: main.rs
simplest-read-only-profiling/src/: main.rs
simplest-read-only/src/: main.rs
test-1-opus4/src/: main.rs
timstof-opt_build_indexed/: Cargo.toml
timstof-opt_build_indexed-opt_read/: Rust_run.sh
timstof-opt_build_indexed-opt_read-debug1/: Rust_run.sh
timstof-opt_build_indexed-opt_read-debug1/src/: main.rs  utils.rs
timstof-opt_build_indexed-opt_read-debug2/: Rust_run.sh
timstof-opt_build_indexed-opt_read-debug2/src/: main.rs  processing.rs  utils.rs
timstof-opt_build_indexed-opt_read-debug3/: Rust_run.sh  build.rs
timstof-opt_build_indexed-opt_read-debug3/src/: main.rs
timstof-opt_build_indexed-opt_read/src/: main.rs  utils.rs
timstof-opt_build_indexed/src/: main.rs  utils.rs
timstof/src/: main.rs
