[package]
name = "timstof_data_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies only
timsrust = "0.4.2"              # TimsTOF data format reading
rayon = "1.8"                    # Parallel processing
serde = { version = "1.0", features = ["derive"] }  # Serialization

# Performance-critical concurrent data structures
dashmap = "5.5"                  # Concurrent hashmap for MS2 aggregation
crossbeam-channel = "0.5"        # Lock-free channels for frame processing
parking_lot = "0.12"             # Faster mutexes than std

# Memory allocator for better performance
mimalloc = { version = "0.1", optional = true }

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

# Maximum performance profile
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false