[package]
name = "timstof_data_loader"
version = "0.2.0"
edition = "2021"

[dependencies]
# Core dependencies
timsrust = "0.4.2"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }

# High-performance concurrent data structures
ahash = "0.8"                   # Faster hasher than default
crossbeam-utils = "0.8"          # Cache-padded atomics
thread_local = "1.1"             # Thread-local storage for lock-free accumulation

# Memory allocator
mimalloc = { version = "0.1", optional = true }

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

# Maximum performance profile
[profile.release]
opt-level = 3
lto = "fat"                      # Better than "true" for performance
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false

# CPU-specific optimizations
[profile.release.build-override]
opt-level = 3

# Enable CPU-specific features
[target.'cfg(target_arch = "x86_64")'.dependencies]
# Optional: Add SIMD crates if needed